@@ -20,7 +20,7 @@ package org.tritonus.sampled.file.mpeg;
 
 import java.lang.System.Logger;
 import java.lang.System.Logger.Level;
-import java.util.Arrays;
+import java.util.List;
 import javax.sound.sampled.AudioFileFormat;
 import javax.sound.sampled.AudioFormat;
 
@@ -68,11 +68,9 @@ public class MpegAudioFileWriter extends THeaderlessAudioFileWriter {
     };
 
     public MpegAudioFileWriter() {
-        super(Arrays.asList(FILE_TYPES), Arrays.asList(AUDIO_FORMATS));
-        logger.log(Level.TRACE, "MpegAudioFileWriter.<init>(): begin");
+        super(List.of(FILE_TYPES), List.of(AUDIO_FORMATS));
+        logger.log(Level.TRACE, "begin");
 
-        logger.log(Level.TRACE, "MpegAudioFileWriter.<init>(): end");
+        logger.log(Level.TRACE, "end");
     }
 }
-
-
