@@ -42,181 +42,181 @@ public class StreamState {
     private ogg_stream_state handle;
 
     public StreamState() {
-        logger.log(Level.TRACE, "<init>: begin");
+        logger.log(Level.TRACE, "begin");
 
-        int nReturn = malloc();
-        if (nReturn < 0) {
+        int ret = malloc();
+        if (ret < 0) {
             throw new RuntimeException("malloc of ogg_stream_state failed");
         }
 
-        logger.log(Level.TRACE, "<init>: end");
+        logger.log(Level.TRACE, "end");
     }
 
     private int malloc() {
-        logger.log(Level.TRACE, "malloc: begin");
+        logger.log(Level.TRACE, "begin");
 
         handle = new ogg_stream_state();
-        logger.log(Level.TRACE, String.format("malloc: handle: %s", handle));
+        logger.log(Level.TRACE, "malloc: handle: %s".formatted(handle));
 
-        logger.log(Level.TRACE, "malloc: end");
+        logger.log(Level.TRACE, "end");
 
         return 0;
     }
 
     public void free() {
-        logger.log(Level.TRACE, "free: begin");
+        logger.log(Level.TRACE, "begin");
 
         handle = null;
 
-        logger.log(Level.TRACE, "free: end");
+        logger.log(Level.TRACE, "end");
     }
 
     /**
      * Calls ogg_stream_init().
      */
-    public int init(int nSerialNo) {
-        logger.log(Level.TRACE, "init: begin");
+    public int init(int serialNo) {
+        logger.log(Level.TRACE, "begin");
 
-        int nReturn = OggLibrary.INSTANCE.ogg_stream_init(handle, nSerialNo);
+        int ret = OggLibrary.INSTANCE.ogg_stream_init(handle, serialNo);
 
-        logger.log(Level.TRACE, "init: end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls ogg_stream_clear().
      */
     public int clear() {
-        logger.log(Level.TRACE, "clear: begin");
+        logger.log(Level.TRACE, "begin");
 
-        int nReturn = OggLibrary.INSTANCE.ogg_stream_clear(handle);
+        int ret = OggLibrary.INSTANCE.ogg_stream_clear(handle);
 
-        logger.log(Level.TRACE, "clear: end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls ogg_stream_reset().
      */
     public int reset() {
-        logger.log(Level.TRACE, "reset: begin");
+        logger.log(Level.TRACE, "begin");
 
-        int nReturn = OggLibrary.INSTANCE.ogg_stream_reset(handle);
+        int ret = OggLibrary.INSTANCE.ogg_stream_reset(handle);
 
-        logger.log(Level.TRACE, "reset: end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls ogg_stream_destroy().
      */
     public int destroy() {
-        logger.log(Level.TRACE, "destroy: begin");
+        logger.log(Level.TRACE, "begin");
 
-        int nReturn = OggLibrary.INSTANCE.ogg_stream_destroy(handle);
+        int ret = OggLibrary.INSTANCE.ogg_stream_destroy(handle);
 
-        logger.log(Level.TRACE, "destroy: end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls ogg_stream_eos().
      */
     public boolean isEOSReached() {
-        logger.log(Level.TRACE, "isEOSReached: begin");
+        logger.log(Level.TRACE, "begin");
 
-        int nReturn = OggLibrary.INSTANCE.ogg_stream_eos(handle);
+        int ret = OggLibrary.INSTANCE.ogg_stream_eos(handle);
 
-        logger.log(Level.TRACE, "isEOSReached: end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn != 0;
+        return ret != 0;
     }
 
     /**
      * Calls ogg_stream_packetin().
      */
     public int packetIn(Packet packet) {
-        logger.log(Level.TRACE, "packetIn: begin");
+        logger.log(Level.TRACE, "begin");
 
         ogg_packet packetHandle = packet.getHandle();
-        int nReturn = OggLibrary.INSTANCE.ogg_stream_packetin(handle, packetHandle);
+        int ret = OggLibrary.INSTANCE.ogg_stream_packetin(handle, packetHandle);
 
-        logger.log(Level.TRACE, "packetIn: end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls ogg_stream_pageout().
      */
     public int pageOut(Page page) {
-        logger.log(Level.TRACE, "pageOut: begin");
+        logger.log(Level.TRACE, "begin");
 
         ogg_page pageHandle = page.getHandle();
-        int nReturn = OggLibrary.INSTANCE.ogg_stream_pageout(handle, pageHandle);
+        int ret = OggLibrary.INSTANCE.ogg_stream_pageout(handle, pageHandle);
 
-        logger.log(Level.TRACE, "pageOut: end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls ogg_stream_flush().
      */
     public int flush(Page page) {
-        logger.log(Level.TRACE, "flush: begin");
+        logger.log(Level.TRACE, "begin");
 
         ogg_page pageHandle = page.getHandle();
-        int nReturn = OggLibrary.INSTANCE.ogg_stream_flush(handle, pageHandle);
+        int ret = OggLibrary.INSTANCE.ogg_stream_flush(handle, pageHandle);
 
-        logger.log(Level.TRACE, "flush: end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls ogg_stream_pagein().
      */
     public int pageIn(Page page) {
-        logger.log(Level.TRACE, "pageIn: begin");
+        logger.log(Level.TRACE, "begin");
 
         ogg_page pageHandle = page.getHandle();
-        int nReturn = OggLibrary.INSTANCE.ogg_stream_pagein(handle, pageHandle);
+        int ret = OggLibrary.INSTANCE.ogg_stream_pagein(handle, pageHandle);
 
-        logger.log(Level.TRACE, "pageIn: end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls ogg_stream_packetout().
      */
     public int packetOut(Packet packet) {
-        logger.log(Level.TRACE, "packetOut: begin");
+        logger.log(Level.TRACE, "begin");
 
         ogg_packet packetHandle = packet.getHandle();
-        int nReturn = OggLibrary.INSTANCE.ogg_stream_packetout(handle, packetHandle);
+        int ret = OggLibrary.INSTANCE.ogg_stream_packetout(handle, packetHandle);
 
-        logger.log(Level.TRACE, "packetOut: end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls ogg_stream_packetpeek().
      */
     public int packetPeek(Packet packet) {
-        logger.log(Level.TRACE, "packetPeek: begin");
+        logger.log(Level.TRACE, "begin");
 
         ogg_packet packetHandle = packet.getHandle();
-        int nReturn = OggLibrary.INSTANCE.ogg_stream_packetpeek(handle, packetHandle);
+        int ret = OggLibrary.INSTANCE.ogg_stream_packetpeek(handle, packetHandle);
 
-        logger.log(Level.TRACE, "packetPeek: end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 }
