@@ -1,6 +1,5 @@
 package vavi.sound.sampled.jna.codec;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.sun.jna.NativeLong;
@@ -53,7 +52,7 @@ public class vorbis_dsp_state extends Structure {
 
     @Override
     protected List<String> getFieldOrder() {
-        return Arrays.asList("analysisp", "vi", "pcm", "pcmret", "pcm_storage", "pcm_current", "pcm_returned", "preextrapolate", "eofflag", "lW", "W", "nW", "centerW", "granulepos", "sequence", "glue_bits", "time_bits", "floor_bits", "res_bits", "backend_state");
+        return List.of("analysisp", "vi", "pcm", "pcmret", "pcm_storage", "pcm_current", "pcm_returned", "preextrapolate", "eofflag", "lW", "W", "nW", "centerW", "granulepos", "sequence", "glue_bits", "time_bits", "floor_bits", "res_bits", "backend_state");
     }
 
     public vorbis_dsp_state(Pointer peer) {
