@@ -1,6 +1,5 @@
 package vavi.sound.sampled.jna.ogg;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.sun.jna.NativeLong;
@@ -39,7 +38,7 @@ public class ogg_packet extends Structure {
 
     @Override
     protected List<String> getFieldOrder() {
-        return Arrays.asList("packet", "bytes", "b_o_s", "e_o_s", "granulepos", "packetno");
+        return List.of("packet", "bytes", "b_o_s", "e_o_s", "granulepos", "packetno");
     }
 
     /**
