@@ -1,6 +1,5 @@
 package vavi.sound.sampled.jna.vorbisenc;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.sun.jna.NativeLong;
@@ -71,7 +70,7 @@ public class ovectl_ratemanage_arg extends Structure {
 
     @Override
     protected List<String> getFieldOrder() {
-        return Arrays.asList("management_active", "bitrate_hard_min", "bitrate_hard_max", "bitrate_hard_window", "bitrate_av_lo", "bitrate_av_hi", "bitrate_av_window", "bitrate_av_window_center");
+        return List.of("management_active", "bitrate_hard_min", "bitrate_hard_max", "bitrate_hard_window", "bitrate_av_lo", "bitrate_av_hi", "bitrate_av_window", "bitrate_av_window_center");
     }
 
     /**
